message SignedMessage {
    bytes message = 1;
    bytes signature = 2;
}

message Empty {
}
